tests/baselines/reference/interfaceImplementation3.errors.txt
tests/cases/compiler/interfaceImplementation3.ts(8,7): error TS2420: Class 'C4' incorrectly implements interface 'I1'.
  Property 'iAny' is missing in type 'C4' but required in type 'I1'.


==== tests/cases/compiler/interfaceImplementation3.ts (1 errors) ====
    interface I1 {
        iObj:{ };
        iNum:number;
        iAny:any;
        iFn():void;
    }
    
    class C4 implements I1 {
          ~~
!!! error TS2420: Class '{|C4|0|}' incorrectly implements interface '{|I1|1|}'.
!!! error TS2420:   Property 'iAny' is missing in type '{|C4|2|}' but required in type '{|I1|3|}'.
!!! related TS2728 tests/cases/compiler/interfaceImplementation3.ts:4:5: 'iAny' is declared here.
!!! annotated symbol 0 tests/cases/compiler/interfaceImplementation3.ts:8:7
!!! annotated symbol 1 tests/cases/compiler/interfaceImplementation3.ts:1:11
!!! annotated symbol 2 tests/cases/compiler/interfaceImplementation3.ts:8:7
!!! annotated symbol 3 tests/cases/compiler/interfaceImplementation3.ts:1:11
        public iObj:{ };
        public iNum:number;
        public iFn() { }
    }
    
    
    